--- a/index.html
+++ b/index.html
@@ -136,11 +136,11 @@
                     </section>
                     <section class="main__pages">
                         <a href="cigarettes.html" class="main__link page-link page-link--left">
-                            <img class="page-link__img" src="https://github.com/RiseZ/cigarettes-site/blob/main/img/cigarettes-index.jpg" alt="" />
+                            <img class="page-link__img" src="/img/cigarettes-index.jpg" alt="cigarettes" />
                             <p class="page-link__text">Сигареты</p>
                         </a>
                         <a href="index.html" class="main__link page-link">
-                            <img class="page-link__img" src="https://github.com/RiseZ/cigarettes-site/blob/main/img/coffee-index.png" alt="" />
+                            <img class="page-link__img" src="/img/coffee-index.png" alt="coffee" />
                             <p class="page-link__text">Кофе</p>
                         </a>
                     </section>
